--- a/notebook/pyproject.toml
+++ b/notebook/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "aiohttp>=3.12.15",
     "azure-identity>=1.25.0",
     "azure-storage-blob>=12.26.0",
     "faker>=37.8.0",
     "pandas>=2.3.2",
+    "python-dotenv>=1.1.1",
     "reportlab>=4.4.3",
 ]
